<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>

 	<groupId>ch.wenkst</groupId>
 	<artifactId>sw-utils</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>

  	<name>sw-utils</name>
  	<url>http://maven.apache.org</url>

  	<properties>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    	<maven.compiler.target>10</maven.compiler.target>
    	<maven.compiler.source>10</maven.compiler.source>
    	<junit.jupiter.version>5.0.3</junit.jupiter.version>
  	</properties>

  	<dependencies>
  		<!-- unit tests -->
    	<dependency>
      		<groupId>org.junit.jupiter</groupId>
      		<artifactId>junit-jupiter-api</artifactId>
      		<version>5.3.0</version>
      		<scope>test</scope>
    	</dependency>
    
    	<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.3.0</version>
			<scope>test</scope>
		</dependency>
    
    	<dependency>
    		<groupId>org.junit.platform</groupId>
    		<artifactId>junit-platform-launcher</artifactId>
    		<version>1.3.0</version>
    		<scope>test</scope>
		</dependency>
		
		<!-- slf4j -->
		<dependency>
    		<groupId>org.slf4j</groupId>
    		<artifactId>slf4j-api</artifactId>
    		<version>1.8.0-beta2</version>
		</dependency>
		
		<!-- slf4j provider in order to use the framework log4j2 at runtime -->
		<dependency>
    		<groupId>org.apache.logging.log4j</groupId>
    		<artifactId>log4j-slf4j-impl</artifactId>
    		<version>2.11.1</version>
		</dependency>

    
    	<!-- log4j2 -->
	    <dependency>
			<groupId>org.apache.logging.log4j</groupId>
      		<artifactId>log4j-core</artifactId>
      		<version>2.11.1</version>
		</dependency>
	
		<dependency>
      		<groupId>org.apache.logging.log4j</groupId>
      		<artifactId>log4j-api</artifactId>
      		<version>2.11.1</version>
    	</dependency>
    
    
    	<!-- gson to handle json -->
    	<dependency>
      		<groupId>com.google.code.gson</groupId>
      		<artifactId>gson</artifactId>
      		<version>2.8.5</version>
		</dependency>
	
     
    	<!-- bouncy castle provider -->
		<dependency>
      		<groupId>org.bouncycastle</groupId>
      		<artifactId>bcprov-jdk15on</artifactId>
      		<version>1.60</version>
		</dependency>
	
		<dependency>
      		<groupId>org.bouncycastle</groupId>
      		<artifactId>bcpkix-jdk15on</artifactId>
      		<version>1.60</version>
		</dependency>
	
		<dependency>
      		<groupId>org.bouncycastle</groupId>
      		<artifactId>bctls-jdk15on</artifactId>
      		<version>1.60</version>
		</dependency>
	
	
		<!-- mongoDB -->
		<dependency>
      		<groupId>org.mongodb</groupId>
      		<artifactId>mongo-java-driver</artifactId>
      		<version>3.8.1</version>
		</dependency>
	
		<dependency>
      		<groupId>org.mongodb.morphia</groupId>
      		<artifactId>morphia</artifactId>
      		<version>1.3.2</version>
		</dependency>
	
	
		<!-- grizzly core for the ssl context configurator -->
		<dependency>
      		<groupId>org.glassfish.grizzly</groupId>
      		<artifactId>grizzly-core</artifactId>
      		<version>2.4.3</version>
		</dependency>
		
		
  	</dependencies>
  	
  	
	<build>
    	<plugins>
        	<plugin>
    			<groupId>org.apache.maven.plugins</groupId>
    			<artifactId>maven-compiler-plugin</artifactId>
    			<version>3.7.0</version>
    			<configuration>
        			<release>10</release>
    			</configuration>
    			<dependencies>
        			<dependency>
            			<groupId>org.ow2.asm</groupId>
            			<artifactId>asm</artifactId>
            			<version>6.2</version> <!-- Use newer version of ASM -->
        			</dependency>
    			</dependencies>
			</plugin>
    	</plugins>
	</build>
</project>
